# strands-env

./: .license-header.txt  .pre-commit-config.yaml  CLAUDE.md  pyproject.toml
.github/workflows/: test.yml
examples/: bedrock_judge_demo.py  calculator_demo.py  web_search_demo.py
examples/eval/aime_code/: code_sandbox_env.py
examples/eval/simple_math/: calculator_env.py  simple_math_evaluator.py
examples/eval/terminal_bench/: terminal_bench_env.py
src/strands_env/: __init__.py
src/strands_env/cli/: __init__.py  config.py  eval.py  utils.py
src/strands_env/core/: __init__.py  environment.py  models.py  types.py
src/strands_env/environments/: __init__.py
src/strands_env/environments/calculator/: __init__.py  env.py
src/strands_env/environments/code_sandbox/: env.py
src/strands_env/environments/mcp/: __init__.py  env.py
src/strands_env/environments/terminal_bench/: __init__.py  env.py  reward.py
src/strands_env/environments/web_search/: __init__.py  env.py
src/strands_env/eval/: __init__.py  evaluator.py  metrics.py  registry.py
src/strands_env/eval/benchmarks/: __init__.py  aime.py  terminal_bench.py
src/strands_env/rewards/: __init__.py  llm_judge_reward.py  math_verify_reward.py
src/strands_env/tools/: __init__.py  code_interpreter.py  web_scraper.py  web_search.py
src/strands_env/utils/: __init__.py  aws.py  decorators.py  sglang.py
tests/: conftest.py
tests/integration/: __init__.py  conftest.py  test_code_sandbox.py  test_math_env.py  test_terminal_bench.py  test_web_search.py
tests/unit/: test_aws.py  test_environment.py  test_eval.py  test_math_reward.py  test_models.py  test_registry.py  test_types.py
