[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strands-env"
version = "0.2.3"
description = "Standardizing environment infrastructure with Strands Agents — step, observe, reward."
authors = [{name = "Yuan He", email = "yuanhe.cs.ai@gmail.com"}]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "strands-sglang",
    "strands-agents-tools",
    "datasets",
    "math-verify>=0.8.0",
    "click>=8.0.0",
    "tqdm>=4.0.0",
    "tiktoken>=0.5.0",
    "trafilatura>=2.0.0",
    "html2text",
    "python-dotenv",
]

[project.scripts]
strands-env = "strands_env.cli:main"

[project.optional-dependencies]
litellm = ["strands-agents[litellm]"]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "pytest-timeout>=2.0.0",
    # Linting & Build
    "pre-commit",
    "ruff>=0.6.0",
    "twine>=4.0.0",
    "build>=0.10.0",
    # Type checking
    "mypy>=1.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/strands_env"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 90

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # pyflakes
    "G",   # flake8-logging-format
    "I",   # isort
    "LOG", # logging
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"!src/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
